# CRICE50

./: .gitignore  CMakeLists.txt  GCFmit_g0.5.txt  README.md  RICE50++  makefile  output.txt  outputsim.txt  plotTrajectories.py  runBorgRICE50.sh  simulationOutput.txt  solution.txt  test_policy.txt  write_test.py
data/data_baseline/: ppp2mer.csv  ssp_cintensity.csv  ssp_eind_bau.csv  ssp_l.csv  ssp_ykali.csv  ssp_ykali_adj.csv
data/data_climate_witch/: cmdec1.csv  cmphi.csv  emi_preind.csv  rfaerosols.csv  tempc.csv
data/data_economy/: k0.csv
data/data_land_use/: etree_bau.csv  etree_opt.csv
data/data_mod_climate_witch/: cceq.csv  cmdec1.csv  cmdec2.csv  cmeq.csv  cmphi.csv  emi_gwp.csv  emi_preind.csv  rfaerosols.csv  rfc.csv  tempc.csv  wcum_emi0.csv  wcum_emi_eq.csv
data_ed57/data_baseline/: ppp2mer.csv  ssp_cintensity.csv  ssp_cintensity_adj.csv  ssp_eind_bau.csv  ssp_pop.csv  ssp_tfp.csv  ssp_tfp_fix.csv  ssp_ykali.csv  ssp_ykali_adj.csv
data_ed57/data_climate_regional/: climate_region_coef.csv
data_ed57/data_climate_witch/: cceq.csv  cmdec2.csv  emi_gwp.csv  oghg_coeff.csv  rfaerosols.csv  wcum_emi0.csv  wcum_emi_eq.csv
data_ed57/data_coacch/: comega.csv  comega_qmul.csv
data_ed57/data_economy/: k0.csv  s0.csv
data_ed57/data_land_use/: etree_bau.csv  etree_opt.csv
data_ed57/data_macc/: macc_coeffs.csv  mx_multiplier.csv
data_ed57/regions_mapping/: ed57.inc  mapRegionalAdaptData.py  witch13.inc
data_norsou2/data_baseline/: ppp2mer.csv  ssp_cintensity_adj.csv  ssp_eind_bau.csv  ssp_pop.csv  ssp_tfp.csv  ssp_ykali.csv  ssp_ykali_adj.csv
data_norsou2/data_climate_regional/: climate_region_coef.csv
data_norsou2/data_climate_witch/: cmeq.csv  rfc.csv
data_norsou2/data_economy/: s0.csv
data_norsou2/data_macc/: macc_coeffs.csv  mx_multiplier.csv
opt/: plotResults.py  plotResultsMaps.py  plotRuntime.py  runBorgRICE50.sh  sol_policy.txt  test_policy.txt  test_policy_ad.txt  test_policy_exp.txt  write_test.py
opt/BorgOutput/: rntdynamics_1.txt
opt/Hydrocalc/: plotResults.py  plotResultsMaps.py  plotResultsScenario.py  plotRuntime.py
opt/Hydrocalc/BorgOutput/: optRICE50.reference  optRICE50_1_obj.txt  optRICE50_2_obj.txt  optRICE50_3_obj.txt  optRICE50_4_obj.txt  optRICE50_5_obj.txt  rntdynamics_1.txt  rntdynamics_2.txt  rntdynamics_3.txt  rntdynamics_4.txt  rntdynamics_5.txt
settings/: AdaptCoeffOrig.txt  AdaptCoeffOrigADRICE.txt  AdaptCoeffOrigADWITCH.txt  AdaptCoeffOrigED57.txt  AdaptParams.txt  DICEcarbon_params.txt  DICEclimateParams.txt  DamagesCoeffWITCH.txt  EconAgentParams.txt  FAIRCarbonParams.txt  GeoffroyClimateParams.txt  WITCHcarbonParams.txt  WITCHclimateParams.txt  carbon_parameters.txt  comega_neg.csv  comega_pos.csv  generalSettings.txt  globalEconParams.txt  prepare_comega.py  regionNAMES.txt  runBorgRICE50.sh  settingsAgentPolicy.txt  temp_params.txt
src/: CMakeLists.txt  Carbon.cpp  Carbon.h  Climate.cpp  Climate.h  Econ.cpp  Econ.h  EconAgent.cpp  EconAgent.h  RICE.cpp  RICE.h  RICEMain.cpp
src/carbon/: CMakeLists.txt  Carbon.cpp  Carbon.h
src/climate/: CMakeLists.txt  Climate.cpp  Climate.h
src/economy/: CMakeLists.txt  Econ.cpp  Econ.h  EconAgent.cpp  EconAgent.h
src/moeaframework/: CMakeLists.txt  settingsAgentPolicy.txt
src/optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.h
src/temp/: Temp.cpp  Temp.h
tools/: convert_gdx2cvs_general.R  convert_gdx2cvs_specific.R  extract_economy_and_baseline.gms  extract_land_use.gms  extract_macc_mx_multiplier.gms
